feat: Add element transforms on quads — rotate, scale, transform-origin
Adds TransformationMatrix field to Quad struct enabling 2D affine
transforms on any quad element. Includes .rotate(), .scale(),
.scale_xy(), .transform_origin() on the Styled trait. All 3 shader
backends updated (Metal, WGSL, HLSL).

--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -325,7 +325,7 @@ default-features = false
 
 [dependencies.schemars]
 version = "1.0"
-features = ["indexmap2"]
+features = ["indexmap2", "smallvec1"]
 
 [dependencies.seahash]
 version = "4.1"
@@ -354,7 +354,7 @@ version = "1.0.6"
 
 [dependencies.smallvec]
 version = "1.6"
-features = ["union"]
+features = ["union", "serde"]
 
 [dependencies.smol]
 version = "2.0"
