feat: Implement all Linux platform features for GPUI extensions
System tray via ksni, global hotkey scaffolding, overlay/click-through
on X11 (shape extension) and Wayland (input region), show/hide, active
window query (X11), auto-launch via XDG autostart, notifications via
notify-rust. Keep-alive-without-windows on both X11 and Wayland.

--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -547,6 +547,7 @@ features = [
     "xinput",
     "cursor",
     "resource_manager",
+    "shape",
     "sync",
 ]
 optional = true
@@ -567,6 +568,12 @@ features = [
     "x11",
 ]
 optional = true
+
+[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies.ksni]
+version = "0.2"
+
+[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies.notify-rust]
+version = "4"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.build-dependencies.naga]
 version = "25.0"
