fix: pin core-text to =21.0.0 to prevent core-graphics version conflict
core-text 21.1.0 depends on core-graphics 0.25, which conflicts with
zed-font-kit's dependency on core-graphics 0.24 when both are in a
workspace that also pulls in core-graphics 0.25 (e.g. via enigo).

--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -606,7 +606,7 @@ version = "0.8.6"
 version = "0.24"
 
 [target.'cfg(target_os = "macos")'.dependencies.core-text]
-version = "21"
+version = "=21.0.0"
 
 [target.'cfg(target_os = "macos")'.dependencies.core-video]
 version = "0.4.3"
