feat: add Windows implementations for power, network, media keys, context menu, dialog, progress bar
Implement Platform trait methods for Windows: system power events
(WM_POWERBROADCAST, WM_WTSSESSION_CHANGE), power save blocker
(SetThreadExecutionState), idle time (GetLastInputInfo), network
status (INetworkListManager COM), media keys (WM_APPCOMMAND),
context menu (TrackPopupMenu), dialog (MessageBoxW), OS info
(RtlGetVersion), progress bar (ITaskbarList3), user attention
(FlashWindowEx), and biometric stub.

--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -712,6 +712,9 @@ features = [
     "Win32_UI_Shell_Common",
     "Win32_UI_Shell_PropertiesSystem",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Power",
+    "Win32_System_RemoteDesktop",
+    "Win32_Networking_NetworkListManager",
 ]
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-core]
